Add YouTube and Video Script platforms with layered content generation and natural human-like tone

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-# Convex deployment URL (automatically generated)
-CONVEX_DEPLOYMENT=
+# Database
+DATABASE_URL=your_neon_database_url_here
 
-# Perplexity API key (to be added later)
+# Perplexity API key
 PERPLEXITY_API_KEY=your_perplexity_api_key_here
 
-# Next.js environment
-NEXT_PUBLIC_CONVEX_URL=
+# NextAuth
+NEXTAUTH_SECRET=your_secret_key_here
+NEXTAUTH_URL=http://localhost:3000
