--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "db:generate": "drizzle-kit generate:pg",
+        "db:migrate": "drizzle-kit migrate",
+        "db:studio": "drizzle-kit studio"
     },
     "dependencies": {
         "autoprefixer": "^10.4.21",
-        "convex": "^1.16.4",
         "next": "^14.2.32",
         "react": "^18",
         "react-dom": "^18"
