refactor: Migrate from Convex to Drizzle and PostgreSQL

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-# Database
-DATABASE_URL=your_neon_database_url_here
-
-# Perplexity API key
-PERPLEXITY_API_KEY=your_perplexity_api_key_here
-
-# NextAuth
-NEXTAUTH_SECRET=your_secret_key_here
-NEXTAUTH_URL=http://localhost:3000
+# Database  
+DATABASE_URL=your_neon_database_url_here  
+  
+# Authentication  
+NEXTAUTH_SECRET=your_nextauth_secret_here  
+  
+# AI Integration  
+PERPLEXITY_API_KEY=your_perplexity_api_key_here  
+  
+# Environment  
+NODE_ENV=development 
