--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "db:generate": "drizzle-kit generate:pg",
+        "db:generate": "drizzle-kit generate",
         "db:migrate": "drizzle-kit migrate",
-        "db:studio": "drizzle-kit studio"
+        "db:studio": "drizzle-kit studio",
+        "db:push": "drizzle-kit push"
     },
     "dependencies": {
+        "@neondatabase/serverless": "^1.0.1",
+        "@types/bcryptjs": "^2.4.6",
+        "@types/jsonwebtoken": "^9.0.10",
         "autoprefixer": "^10.4.21",
+        "bcryptjs": "^3.0.2",
+        "drizzle-kit": "^0.31.4",
+        "drizzle-orm": "^0.44.5",
+        "jsonwebtoken": "^9.0.2",
         "next": "^14.2.32",
         "react": "^18",
         "react-dom": "^18"
