--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
         "@types/bcryptjs": "^2.4.6",
         "@types/jsonwebtoken": "^9.0.10",
         "autoprefixer": "^10.4.21",
-        "bcryptjs": "^3.0.2",
-        "drizzle-kit": "^0.31.4",
-        "drizzle-orm": "^0.44.5",
+        "bcryptjs": "^2.4.3",
+        "drizzle-orm": "^0.29.3",
         "jsonwebtoken": "^9.0.2",
-        "next": "^14.2.32",
+        "next": "14.1.0",
         "react": "^18",
         "react-dom": "^18"
     },
@@ -30,9 +29,10 @@
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
-        "eslint-config-next": "14.2.15",
+        "eslint-config-next": "14.1.0",
+        "drizzle-kit": "^0.20.13",
         "postcss": "^8",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^3.3.0",
         "typescript": "^5"
     }
 }
