--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     },
     "dependencies": {
         "@neondatabase/serverless": "^1.0.1",
-        "@types/bcryptjs": "^2.4.6",
-        "@types/jsonwebtoken": "^9.0.10",
-        "autoprefixer": "^10.4.21",
-        "bcryptjs": "^2.4.3",
-        "drizzle-orm": "^0.29.3",
+        "bcryptjs": "^3.0.2",
+        "drizzle-orm": "^0.44.5",
         "jsonwebtoken": "^9.0.2",
-        "next": "14.1.0",
-        "react": "^18",
-        "react-dom": "^18"
+        "next": "^15.5.3",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1"
     },
     "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "eslint": "^8",
-        "eslint-config-next": "14.1.0",
-        "drizzle-kit": "^0.20.13",
-        "postcss": "^8",
-        "tailwindcss": "^3.3.0",
-        "typescript": "^5"
+        "@types/bcryptjs": "^3.0.0",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/node": "^24.5.0",
+        "@types/react": "^19.1.13",
+        "@types/react-dom": "^19.1.9",
+        "autoprefixer": "^10.4.21",
+        "drizzle-kit": "^0.31.4",
+        "eslint": "^9.35.0",
+        "eslint-config-next": "^15.5.3",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.13",
+        "typescript": "^5.9.2"
     }
 }
