--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-dom": "^19.1.1"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.13",
         "@types/bcryptjs": "^3.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.5.0",
