--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "dependencies": {
         "@neondatabase/serverless": "^1.0.1",
         "bcryptjs": "^3.0.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "drizzle-orm": "^0.44.5",
         "jsonwebtoken": "^9.0.2",
         "next": "^15.5.3",
         "react": "^19.1.1",
-        "react-dom": "^19.1.1"
+        "react-dom": "^19.1.1",
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.13",
@@ -34,6 +37,7 @@
         "eslint-config-next": "^15.5.3",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.13",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.9.2"
     }
 }
